--- a/src/index.css
+++ b/src/index.css
@@ -2,38 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .text-stroke-cosmic {
-  -webkit-text-stroke-width: 1px; /* Lebar stroke */
-  -webkit-text-stroke-color: white; /* Warna stroke */
-  color: #202020; 
-  
+     -webkit-text-stroke-width: 1px; /* Lebar stroke */
+     -webkit-text-stroke-color: white; /* Warna stroke */
+     color: #202020;
 }
 .text-stroke-wonder {
-  -webkit-text-stroke-width: 1px; /* Lebar stroke */
-  -webkit-text-stroke-color: white; /* Warna stroke */
-  color: #050505; 
-  
+     -webkit-text-stroke-width: 1px; /* Lebar stroke */
+     -webkit-text-stroke-color: white; /* Warna stroke */
+     color: #050505;
+}
+
+body {
+     background-color: black;
 }
 
 /* General Button Style */
 .btn {
-  display: inline-block;
-  position: relative;
-  color: #fff;
-  font-weight: 500;
-  text-decoration: none;
-  text-transform: uppercase;
-  padding: 15px 50px;
-  text-align: center;
-  clip-path: polygon(10% 0, 90% 0, 100% 50%, 90% 100%, 10% 100%, 0 50%);
-  background-color: #020202; /* Latar belakang transparan */
-  border: 2px solid #fff; /* Garis tepi putih */
-  /* background-image: radial-gradient(200% 70% at center 20%, rgba(48,44,45,1) -30%, rgba(50,46,47,1) 49%, rgba(22,18,19,1) 50%, rgba(22,18,19,1) 150%); */
-  background-repeat: no-repeat;
-  transition: background-position-y ease-in-out 250ms;
+     display: inline-block;
+     position: relative;
+     color: #fff;
+     font-weight: 500;
+     text-decoration: none;
+     text-transform: uppercase;
+     padding: 15px 50px;
+     text-align: center;
+     clip-path: polygon(10% 0, 90% 0, 100% 50%, 90% 100%, 10% 100%, 0 50%);
+     background-color: #020202; /* Latar belakang transparan */
+     border: 2px solid #fff; /* Garis tepi putih */
+     /* background-image: radial-gradient(200% 70% at center 20%, rgba(48,44,45,1) -30%, rgba(50,46,47,1) 49%, rgba(22,18,19,1) 50%, rgba(22,18,19,1) 150%); */
+     background-repeat: no-repeat;
+     transition: background-position-y ease-in-out 250ms;
 }
 
 .btn:hover {
-  background-position-y: -50px;
+     background-position-y: -50px;
 }
