--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,12 @@ body {
      background-color: black;
 }
 
+.navbar-fixed {
+     @apply fixed z-[100] bg-black bg-opacity-70;
+     backdrop-filter: blur(5px);
+     box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
+}
+
 /* General Button Style */
 .btn {
      display: inline-block;
