--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,12 @@
 
 .text-stroke-cosmic {
      -webkit-text-stroke-width: 1px;
-          -webkit-text-stroke-color: white;
+     -webkit-text-stroke-color: white;
      color: #202020;
 }
 .text-stroke-wonder {
      -webkit-text-stroke-width: 1px;
-          -webkit-text-stroke-color: white;
+     -webkit-text-stroke-color: white;
      color: #050505;
 }
 
@@ -19,6 +19,12 @@ body {
 
 .planet {
      animation: spin 10s linear infinite;
+}
+
+.navbar-fixed {
+     @apply fixed z-[100] bg-black bg-opacity-70;
+     backdrop-filter: blur(5px);
+     box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
 
 @keyframes spin {
